--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,28 +1,32 @@
 .hero {
   background-color: var(--color-hero-bg);
+  background-image: url("/img/hero-wave.svg");
+  background-repeat: no-repeat;
+  background-position: center calc(100% + 5px);
+  background-size: 1440px auto;
   color: var(--color-text-light);
+
+  @media (width >= calc(1000 / 16 * 1rem)) {
+    background-position: -5px calc(100% + 5px);
+    background-size: calc(100% + 10px) auto;
+  }
 
   &__wrapper {
     //display: flow-root;//creează un context de tip bloc pentru wrapper astfel încât marginea imaginii nu mai impinge in navbar
     //daca folosim margin-block (top si bottom) in image
     display: grid;
-    padding-block: 30px 60px;
+    padding-block: 30px 120px;
 
     @media (width >= calc(1000 / 16 * 1rem)) {
       grid-template-columns: 6fr 5fr;
-      align-items: center;
-      padding-block: 40px 80px;
+      padding-block: 80px 0;
     }
   }
 
   &__image {
-    width: calc(200 / 16 * 1rem);
+    width: clamp(12.5rem, 1.888rem + 45vw, 30.1875rem);
     margin-block-end: 40px;
     justify-self: center;
-
-    @media (width >= calc(600 / 16 * 1rem)) {
-      width: calc(483 / 16 * 1rem);
-    }
 
     @media (width >= calc(1000 / 16 * 1rem)) {
       order: 1;
@@ -44,7 +48,7 @@
 
   &__content {
     margin-block-end: calc(40 / 16 * 1rem);
-    max-width: 40ch;
+    max-width: 50ch;
   }
 
   &__buttons {
