--- a/app/scss/globals/_fonts.scss
+++ b/app/scss/globals/_fonts.scss
@@ -31,7 +31,7 @@
   --fs-72: calc(72 / 16 * 1rem);
 
   --font-size-topnav: var(--fs-14);
-  --font-size-h1: var(--fs-42);
+  --font-size-h1: clamp(2.625rem, 1.5rem + 4.8vw, 4.5rem);
   --font-size-h2: var(--fs-36);
   --font-size-h3: var(--fs-24);
   --font-size-p: var(--fs-18);
@@ -45,7 +45,6 @@
 
   @media(width >= calc(600 / 16 * 1rem)) {
     --font-size-topnav: var(--fs-16);
-    --font-size-h1: var(--fs-72);
     --font-size-h2: var(--fs-48);
     --font-size-quote: var(--fs-36);
     --font-size-quote-description: var(--fs-24);
