--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -3,6 +3,7 @@
 @forward "hero";
 @forward "features";
 @forward "fw-feature";
+@forward "alt-features";
 @forward "testimonial";
 @forward "fw-cta";
 @forward "footer";
