--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -11,6 +11,7 @@
   --color-main-bg: var(--c-white);
   --color-text-dark: var(--c-gray-dark);
   --color-text-light: var(--c-white);
+  --color-text-link: var(--c-magenta);
   --color-header-bg: var(--c-purple);
   --color-topnav-gradient-1: var(--c-teal);
   --color-topnav-gradient-2: var(--c-yellow);
