--- a/app/scss/globals/_fonts.scss
+++ b/app/scss/globals/_fonts.scss
@@ -27,6 +27,7 @@
   --fs-28: calc(28 / 16 * 1rem);
   --fs-36: calc(36 / 16 * 1rem);
   --fs-42: calc(42 / 16 * 1rem);
+  --fs-44: calc(44 / 16 * 1rem);
   --fs-48: calc(48 / 16 * 1rem);
   --fs-72: calc(72 / 16 * 1rem);
 
@@ -34,18 +35,22 @@
   --font-size-h1: clamp(2.625rem, 1.5rem + 4.8vw, 4.5rem);
   --font-size-h2: var(--fs-36);
   --font-size-h3: var(--fs-24);
+  --font-size-h3-large: var(--fs-36);
   --font-size-p: var(--fs-18);
   --font-size-p-medium: var(--fs-20);
   --font-size-p-medium-desktop: var(--fs-24);
   --font-size-p-large: var(--fs-24);
   --font-size-p-large-desktop: var(--fs-28);
   --font-size-button: var(--fs-18);
+  --font-size-pre-title: var(--fs-20);
   --font-size-quote: var(--fs-24);
   --font-size-quote-description: var(--fs-20);
 
   @media(width >= calc(600 / 16 * 1rem)) {
     --font-size-topnav: var(--fs-16);
     --font-size-h2: var(--fs-48);
+    --font-size-h3-large: var(--fs-44);
+    --font-size-pre-title: var(--fs-24);
     --font-size-quote: var(--fs-36);
     --font-size-quote-description: var(--fs-24);
   }
