--- a/app/scss/components/_features.scss
+++ b/app/scss/components/_features.scss
@@ -1,10 +1,12 @@
+@use "../util/functions" as *;
+
 .features {
   &__wrapper {
     display: grid;
     gap: 40px;
     justify-items: center;
 
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       grid-template-columns: repeat(3, 1fr);
     }
   }
@@ -14,7 +16,7 @@
     grid-auto-rows: min-content;
     gap: 10px;
 
-    @media (width < calc(1000 / 16 * 1rem)) {
+    @media (width < rem(1000)) {
       justify-items: center;
       text-align: center;
     }
@@ -22,7 +24,7 @@
 
   &__icon {
     width: auto;
-    height: calc(48 / 16 * 1rem);
+    height: 48px;
   }
 
   &__title {
