--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,3 +1,5 @@
+@use "../util/functions" as *;
+
 .hero {
   background-color: var(--color-hero-bg);
   background-image: url("/img/hero-wave.svg");
@@ -6,7 +8,7 @@
   background-size: 1440px auto;
   color: var(--color-text-light);
 
-  @media (width >= calc(1000 / 16 * 1rem)) {
+  @media (width >= rem(1000)) {
     background-position: -5px calc(100% + 5px);
     background-size: calc(100% + 10px) auto;
   }
@@ -17,7 +19,7 @@
     display: grid;
     padding-block: 30px 120px;
 
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       grid-template-columns: 6fr 5fr;
       padding-block: 80px 0;
     }
@@ -28,7 +30,7 @@
     margin-block-end: 40px;
     justify-self: center;
 
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       order: 1;
       margin-block-end: 0;
       justify-self: end;
@@ -41,13 +43,13 @@
   &__title {
     margin-block-end: 12px;
 
-    @media (width >= calc(600 / 16 * 1rem)) {
+    @media (width >= rem(600)) {
       margin-block-end: 20px;
     }
   }
 
   &__content {
-    margin-block-end: calc(40 / 16 * 1rem);
+    margin-block-end: 40px;
     max-width: 50ch;
   }
 
