--- a/app/scss/components/_testimonial.scss
+++ b/app/scss/components/_testimonial.scss
@@ -1,3 +1,5 @@
+@use "../util/functions" as *;
+
 .testimonial {
   background-color: var(--color-bg);
   color: var(--color-text);
@@ -8,7 +10,7 @@
   }
 
   &__figure {
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       display: grid;
       column-gap: 40px;
       grid-template-columns: repeat(6, 1fr);
@@ -20,31 +22,31 @@
   }
 
   &__icon {
-    width: calc(53 / 16 * 1rem);
+    width: rem(53);
     margin-block-end: 20px;
 
-    @media (width >= calc(600 / 16 * 1rem)) {
-      width: calc(78 / 16 * 1rem);
+    @media (width >= rem(600)) {
+      width: 78px;
       margin-block-end: 30px;
     }
 
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       margin-block-end: 0;
     }
 
     &:first-child {
-      @media (width >= calc(1000 / 16 * 1rem)) {
+      @media (width >= rem(1000)) {
         grid-area: l-quote;
         justify-self: end;
       }
     }
 
     &:last-child {
-      @media (width < calc(1000 / 16 * 1rem)) {
+      @media (width < rem(1000)) {
         display: none;
       }
 
-      @media (width >= calc(1000 / 16 * 1rem)) {
+      @media (width >= rem(1000)) {
         grid-area: r-quote;
         align-self: end;
         rotate: 180deg;
@@ -57,7 +59,7 @@
   }
 
   &__blockquote {
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       grid-area: quote;
       padding-block-start: 40px;
     }
@@ -69,7 +71,7 @@
     margin-block-end: 30px;
     text-wrap: wrap; //cancel text-wrap:balance from global on paragraph (with balance, right quote is kind of far from text)
 
-    @media (width >= calc(600 / 16 * 1rem)) {
+    @media (width >= rem(600)) {
       margin-block-end: 40px;
     }
   }
@@ -81,19 +83,19 @@
     align-items: center;
     text-align: center;
 
-    @media (width >= calc(600 / 16 * 1rem)) {
+    @media (width >= rem(600)) {
       flex-direction: row;
       text-align: left;
     }
 
-    @media (width >= calc(1000 / 16 * 1rem)) {
+    @media (width >= rem(1000)) {
       grid-area: author;
     }
   }
 
   &__author-image {
-    width: calc(120 / 16 * 1rem);
-    height: calc(120 / 16 * 1rem);
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
   }
 
