Full-width CTA - add form

--- a/app/scss/globals/_fonts.scss
+++ b/app/scss/globals/_fonts.scss
@@ -48,6 +48,7 @@
   --font-size-quote-description: var(--fs-20);
   --font-size-datetime: var(--fs-14);
   --font-size-readtime: var(--fs-14);
+  --font-size-form: var(--fs-18);
 
   @media(width >= calc(600 / 16 * 1rem)) {
     --font-size-topnav: var(--fs-16);
